# AiSchool

./: .gitignore  README.md  reconstructingDraftGSMMs_LuChen.ipynb
content/: Instructions.md
content/AlexFedorec/: glv_abc_rejection.ipynb  part1_community_models.ipynb  part3_glv_abc_smc.ipynb  part4_glv_model_selection_abc_smc.ipynb
content/ClemenceFrioux/: content.md
content/DanielGarza/: README.md  kinetic_model.ipynb  pyproject.toml  requirements.txt  setup.py
content/DanielGarza/modelTemplates/: kombucha.json  kombucha_refined.json
content/DanielGarza/notebooks/: controller_simulation_demo.ipynb  kinetic_model.ipynb  maximize_butyrate_gut_synC.ipynb  test_install.ipynb
content/DanielGarza/src/kinetic_model/: metabolome.py
content/DanielGarza/src/rl/: config.py
content/DanielGarza/src/rl/cli/: train_agent.py
content/DanielGarza/src/rl/examples/configs/: butyrate_control.yaml  kombucha_control.yaml
content/DjordjeBajic/data/: full-factorial-construction_Diaz-Colunga2024.csv
content/DjordjeBajic/scripts/: aux_functions.R  models.R
content/DjordjeBajic/tutorials/: predicting_and_optimizing.Rmd  predicting_and_optimizing.html
content/HarisZafeiropoulos/: content.md
content/LucasBottcher/: microbial_control.ipynb  microbial_control_colab.ipynb  microbial_control_exercises.ipynb  microbial_control_solutions.ipynb
contet/DanielGarza/notebooks/: kinetic_model.ipynb
